fixing in leaderboard mobile navbar looks cut off, and analytics search box, 'x' looks good on mobile

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -18,3 +18,7 @@
   padding: 10px;
   border-radius: 50%;
 }
+
+.full-width {
+  width: 100%;
+}
